--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -1,1 +1,10 @@
-<p>pokemon-list-item works!</p>
+<div class="pokemon-container">
+    <div class="pokemon-sprite-container">
+        <img class="pokemon-sprite" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png">
+    </div>
+    <div class="pokemon-bar">
+        <img class="pokemon-info-icon" src="assets/info.png">
+        <div class="pokemon-name">Ditto</div>
+        <img class="pokemon-pokeball-icon" src="assets/pokeball.png">
+    </div>
+</div>
