--- a/src/app/shared/pokemon-list/pokemon-list.component.html
+++ b/src/app/shared/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,3 @@
-<p>pokemon-list works!</p>
+<div class="pokemon-list">
+    <app-pokemon-list-item *ngFor="let pokemon of pokemon$ | async" [pokemon]="pokemon" class="pokemon-list-item"></app-pokemon-list-item>
+</div>
