--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -22,9 +22,14 @@
 
 }
 
-.pokemon-bar {
+.pokemon-top-bar {
+  font-family: monospace;
   display: flex;
-  width: 100%;
+  height: 20px;
+}
+
+.pokemon-bottom-bar {
+  display: flex;
   height: 20px;
 }
 
