FEAT: header with navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<header>
+    <h1>Pokémon Trainer</h1>
+    <a role='button' routerLinkActive="active-link" routerLink="/catalogue" >Catalogue</a>
+    <a role='button' routerLinkActive="active-link" routerLink="/trainer">Trainer</a>
+    <a role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">Logout</a>
+</header>
 <router-outlet></router-outlet>
