FIX: use titlecase pipe for `pokemon.name` in `PokemonListItemComponent`

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="pokemon-bottom-bar">
     <img class="pokemon-info-icon" src="assets/info.png" />
-    <div class="pokemon-name">{{ pokemon.name }}</div>
+    <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
       [style.visibility]="hasObtained ? 'visible' : 'hidden'"
       class="pokemon-pokeball-icon"
