--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   aspect-ratio: 1;
-  max-width: 150px;
+  max-width: 130px;
   width: 30vw;
   padding: 8px;
   border-radius: 8px;
@@ -33,6 +33,8 @@
 }
 
 .pokemon-name {
+  font-family: monospace;
+  font-size: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
