--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -44,11 +44,13 @@
 
 .pokemon-pokeball-icon {
   z-index: 2;
-  min-height: 16px;
+  max-height: 16px;
+  aspect-ratio: 1;
 }
 
 .pokemon-info-icon {
   z-index: 2;
-  min-height: 16px;
+  max-height: 16px;
+  aspect-ratio: 1;
   cursor: pointer;
 }
