STYLE(catalogue): `PokemonListComponent` no longer uses 100% width

--- a/src/app/catalogue/catalogue.page.html
+++ b/src/app/catalogue/catalogue.page.html
@@ -1,2 +1,4 @@
 <h1>Catalogue</h1>
-<app-pokemon-list></app-pokemon-list>
+<div class="catalogue-pokemon-list-container">
+    <app-pokemon-list class="catalogue-pokemon-list"></app-pokemon-list>
+</div>
