STYLE: removed background color for `PokemonListComponent`

--- a/src/app/shared/pokemon-list/pokemon-list.component.css
+++ b/src/app/shared/pokemon-list/pokemon-list.component.css
@@ -1,5 +1,6 @@
 .pokemon-list-container {
-    background-color: rgb(224, 224, 224); 
+    margin: 0 auto;
+    align-content: center;
 }
 
 .pokemon-list {
