--- a/src/app/trainer/trainer.page.html
+++ b/src/app/trainer/trainer.page.html
@@ -6,5 +6,11 @@
     <ul>
         <li *ngFor="let pokemon of pokemons">{{ pokemon }}</li>
     </ul>
-    <app-pokemon-list></app-pokemon-list>
+    <app-pokemon-list
+    class="catalogue-pokemon-list"
+    [pokemon]="cataloguePokemon"
+    [distance]="1"
+    [throttle]="100"
+    (onScroll)="loadMore()"
+    ></app-pokemon-list>
 </main>
