--- a/src/app/not-found/not-found.page.html
+++ b/src/app/not-found/not-found.page.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<section>
+    <section class="not-found-error-code">
+        <h1 class="first-4-of-404">4</h1>
+        <img src="../../../assets/pokeball.png" alt="0 of 404">
+        <h1 class="second-4-of-404">4</h1>
+    </section>
+    <h2>Page not found</h2>
+    <a role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">Click here if you wish to retur to home</a>
+</section>
