--- a/src/app/not-found/not-found.page.html
+++ b/src/app/not-found/not-found.page.html
@@ -1,9 +1,14 @@
 <section>
     <section class="not-found-error-code">
         <h1 class="first-4-of-404">4</h1>
-        <img src="../../../assets/pokeball.png" alt="0 of 404">
+        <a class="back-to-home-btn" role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">
+            <img src="../../../assets/pokeball.png" alt="0 of 404" title="Go back home">
+        </a>
         <h1 class="second-4-of-404">4</h1>
     </section>
-    <h2>Page not found</h2>
-    <a role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">Click here if you wish to retur to home</a>
+    <main>
+        <h2 class="page-not-found_info">Page not found</h2>
+        <img class="page-not-found_mascot" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" alt="Page not found mascot (Ditto!)">
+        <p class="back-to-home-btn_specification">Click the pokeball if you wish to go back home</p>
+    </main>
 </section>
