--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,1 +1,8 @@
 <p>landing works!</p>
+
+<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)"> 
+    <label for="username">Username</label>
+    <input type="text" name="username" ngModel #username="ngModel" required id="username">
+
+    <button type="submit" [disabled]="loginForm.invalid" >Login</button>
+</form>
