--- a/src/app/not-found/not-found.page.html
+++ b/src/app/not-found/not-found.page.html
@@ -8,7 +8,7 @@
     </section>
     <main>
         <h2 class="page-not-found_info">Page not found</h2>
-        <img class="page-not-found_mascot" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" alt="Page not found mascot (Ditto!)">
+        <img class="page-not-found_mascot" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" alt="Page not found mascot (Ditto!)" title="Ditto">
         <p class="back-to-home-btn_specification">Click the pokeball if you wish to go back home</p>
     </main>
 </section>
