--- a/src/app/details/details.page.css
+++ b/src/app/details/details.page.css
@@ -1,4 +1,17 @@
-.modal-container {
+.modal {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 20px;
+    background-color: rgb(0 0 0 / 0.7);
+}
+
+.modal-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +98,6 @@
     margin: 0 10px;
     border-radius: 8px;
     border: rgb(0 0 0 / 0.15) solid 1px;
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 .pokemon-ability-item {
@@ -94,7 +106,6 @@
     margin-top: 10px;
     border-radius: 8px;
     border: rgb(0 0 0 / 0.15) solid 1px;
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 .pokemon-type-title {
@@ -104,12 +115,11 @@
 
 .pokemon-details-close {
     margin: 8px;
-    background-color: rgba(255, 0, 0, 0.267);
+    background-color: rgba(255, 255, 255);
     width: max-content;
     cursor: pointer;
     padding: 10px;
     border-radius: 8px;
     bottom: 5vh;
     border: rgb(0 0 0 / 0.15) solid 1px;
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
