FEAT: get name of clicked pokemon

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -13,6 +13,7 @@
       [style.visibility]="hasObtained ? 'visible' : 'hidden'"
       class="pokemon-pokeball-icon"
       src="assets/pokeball.png"
+      (click)="handleCatchClicked(pokemon.name)"
     />
   </div>
 </div>
