--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -43,13 +43,7 @@
   z-index: 2;
 }
 
-.pokemon-pokeball-icon {
-  z-index: 2;
-  max-height: 16px;
-  aspect-ratio: 1;
-}
-
-.pokemon-info-icon {
+.pokemon-info-icon, .pokemon-pokeball-icon {
   z-index: 2;
   max-height: 16px;
   aspect-ratio: 1;
