FEAT: added Details modal to Catalogue

--- a/src/app/catalogue/catalogue.page.html
+++ b/src/app/catalogue/catalogue.page.html
@@ -9,4 +9,7 @@
     [throttle]="100"
     (onScroll)="loadMore()"
   ></app-pokemon-list>
+
+  <app-pokemon-details-modal></app-pokemon-details-modal>
+  
 </div>
