--- a/src/app/shared/pokemon-details-modal/pokemon-details-modal.component.html
+++ b/src/app/shared/pokemon-details-modal/pokemon-details-modal.component.html
@@ -32,6 +32,6 @@
                 </div>
             </div>
         </div>
-        <div class="pokemon-details-close">Close</div>
+        <div class="pokemon-details-close" (click)="onCloseClicked.emit()">Close</div>
     </div>
 </div>
