--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -7,7 +7,7 @@
     />
   </div>
   <div class="pokemon-bottom-bar">
-    <img class="pokemon-info-icon" src="assets/info.png" />
+    <img class="pokemon-info-icon" src="assets/info.png" (click)="onInfoClicked.emit(pokemon)" />
     <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
       [style.visibility]="hasObtained ? 'visible' : 'hidden'"
