--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -1,5 +1,6 @@
 <div class="pokemon-container">
-  <div class="pokemon-top-bar">#{{ (pokemonDetails$ | async)?.id }}</div>
+  <div class="pokemon-top-bar">#{{ (pokemonDetails$ | async)?.id }}
+  </div>
   <div class="pokemon-sprite-container">
     <img
       class="pokemon-sprite"
