FIX: added async pipe to Observable template argument

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -10,7 +10,7 @@
     <img class="pokemon-info-icon" src="assets/info.png" (click)="onInfoClicked.emit(pokemon)" />
     <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
-      [style.visibility]="hasObtained ? 'visible' : 'hidden'"
+      [style.visibility]="(hasObtained$ | async) ? 'visible' : 'hidden'"
       class="pokemon-pokeball-icon"
       src="assets/pokeball.png"
     />
