style: styled landing page and set up common layout between pages (header and the page contents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<header>
-    <h1>Pokémon Trainer</h1>
-    <a role='button' routerLinkActive="active-link" routerLink="/catalogue" >Catalogue</a>
-    <a role='button' routerLinkActive="active-link" routerLink="/trainer">Trainer</a>
-    <a role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">Logout</a>
-</header>
-<router-outlet></router-outlet>
+<div id="app-root">
+    <header id="app-header">
+        <h1>Pokémon Trainer</h1>
+        <a role='button' routerLinkActive="active-link" routerLink="/catalogue" >Catalogue</a>
+        <a role='button' routerLinkActive="active-link" routerLink="/trainer">Trainer</a>
+        <a role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">Logout</a>
+    </header>
+    <div id="app-page">
+        <router-outlet></router-outlet>
+    </div>
+</div>
