--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,24 @@
-header {
+#app-root {
+    margin: 0;
+    padding: 0;
+
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#app-header {
+    flex-grow: 0;
+    background-color: gray;
+    height: 10vh;
+
     display: grid;
     grid-template-columns: 1fr auto auto auto;
+}
+
+#app-page {
+    flex-grow: 1;
 }
 
 a {
