FEAT: add (click) for icon in `PokemonListItemComponent`

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -4,6 +4,7 @@
     <img
       class="pokemon-sprite"
       [src]="(pokemonDetails$ | async)?.sprites?.front_default"
+      (click)="onIconClicked()"
     />
   </div>
   <div class="pokemon-bottom-bar">
