--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -11,7 +11,7 @@
     <img class="pokemon-info-icon" src="assets/info.png" />
     <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
-      [style.visibility]="hasObtained ? 'visible' : 'hidden'"
+      [style.visibility]="hasObtained ? 'hidden' : 'visible'"
       class="pokemon-pokeball-icon"
       src="assets/pokeball.png"
       (click)="handleCatchClicked(pokemon.name)"
