--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div id="app-root">
     <header id="app-header">
         <h1>Pokémon Trainer</h1>
-        <a role='button' routerLinkActive="active-link" routerLink="/catalogue" >Catalogue</a>
-        <a role='button' routerLinkActive="active-link" routerLink="/trainer">Trainer</a>
-        <button (click)="logoutButtonHandler()">Logout</button>
+        <a *ngIf="navlinksVisible" role='button' routerLinkActive="active-link" routerLink="/catalogue" >Catalogue</a>
+        <a *ngIf="navlinksVisible" role='button' routerLinkActive="active-link" routerLink="/trainer">Trainer</a>
+        <button *ngIf="navlinksVisible" (click)="logoutButtonHandler()">Logout</button>
     </header>
     <div id="app-page">
         <router-outlet></router-outlet>
