FEAT: can now remove pokemon

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -11,7 +11,7 @@
     <img class="pokemon-info-icon" src="assets/info.png" (click)="onInfoClicked.emit(pokemon)" />
     <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
-      [style.visibility]="hasObtained ? 'hidden' : 'visible'"
+      [style.visibility]="hasObtained ? 'visible': 'hidden'"
       class="pokemon-pokeball-icon"
       src="assets/pokeball.png"
     />
