FEAT: added showInfo property to toggle visibilty of info icon

--- a/src/app/catalogue/catalogue.page.html
+++ b/src/app/catalogue/catalogue.page.html
@@ -8,6 +8,7 @@
     [distance]="1"
     [throttle]="100"
     (onScroll)="loadMore()"
+    [showInfo]="true"
     (onItemInfoClicked)="toggleModalVisibility($event)"
   ></app-pokemon-list>
 
