--- a/src/app/shared/pokemon-list/pokemon-list.component.html
+++ b/src/app/shared/pokemon-list/pokemon-list.component.html
@@ -10,6 +10,7 @@
       *ngFor="let pokemonElement of pokemon"
       [pokemon]="pokemonElement"
       class="pokemon-list-item"
+      [showInfo]="showInfo ?? false"
       (onInfoClicked)="onItemInfoClicked.emit($event)"
     ></app-pokemon-list-item>
   </div>
