--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.html
@@ -8,10 +8,15 @@
     />
   </div>
   <div class="pokemon-bottom-bar">
-    <img [style.visibility]="showInfo ? 'visible': 'hidden'" class="pokemon-info-icon" src="assets/info.png" (click)="onInfoClicked.emit(pokemon)" />
+    <img
+      [style.visibility]="showInfo ? 'visible' : 'hidden'"
+      class="pokemon-info-icon"
+      src="assets/info.png"
+      (click)="onInfoClicked.emit(pokemon)"
+    />
     <div class="pokemon-name">{{ pokemon.name | titlecase }}</div>
     <img
-      [style.visibility]="hasObtained ? 'visible': 'hidden'"
+      [style.visibility]="hasObtained ? 'visible' : 'hidden'"
       class="pokemon-pokeball-icon"
       src="assets/pokeball.png"
     />
