--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,45 +1,48 @@
 #app-root {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    height: 100vh;
+  height: 100vh;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 #app-header {
-    flex-grow: 0;
-    background-color: gray;
-    padding-left: 2.5vw;
-    display: grid;
-    grid-template-columns: 1fr auto auto auto;
+  flex-grow: 0;
+  background-color: gray;
+  padding-left: 2.5vw;
+  display: grid;
+  grid-template-columns: 1fr auto auto auto;
 }
 
-h1, a, button {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h1,
+a,
+button {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #app-page {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
-a, button {
-    padding: 10px;
-    align-self: center;
-    border: 1px solid;
-    margin: 0 10px;
-    font-size: 20px;
-    text-decoration: none;
-    color: black;
-    background: rgb(235, 233, 233);
-    border-radius: 10px;
+a,
+button {
+  padding: 10px;
+  align-self: center;
+  border: 1px solid;
+  margin: 0 10px;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+  background: rgb(235, 233, 233);
+  border-radius: 10px;
 }
 
 a:hover {
-    background: rgb(192, 189, 189);
+  background: rgb(192, 189, 189);
 }
 
 .active-link {
-    background: rgb(192, 189, 189);
+  background: rgb(192, 189, 189);
 }
