--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,10 +1,18 @@
 <main>
-    <div id="center-box">
-        <img id="pokeball-logo" src="assets/pokeball.png" alt="Pokeball">
-        <h1>Login</h1>
-        <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)"> 
-            <input type="text" name="username" ngModel #username="ngModel" required id="username" placeholder="username">
-            <button type="submit" [disabled]="loginForm.invalid" >Login</button>
-        </form>
-    </div>
+  <div id="center-box">
+    <img id="pokeball-logo" src="assets/pokeball.png" alt="Pokeball" />
+    <h1>Login</h1>
+    <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+      <input
+        type="text"
+        name="username"
+        ngModel
+        #username="ngModel"
+        required
+        id="username"
+        placeholder="username"
+      />
+      <button type="submit" [disabled]="loginForm.invalid">Login</button>
+    </form>
+  </div>
 </main>
