--- a/src/app/shared/pokemon-details-modal/pokemon-details-modal.component.css
+++ b/src/app/shared/pokemon-details-modal/pokemon-details-modal.component.css
@@ -1,126 +1,127 @@
 .modal {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    padding: 20px;
-    z-index: 999;
-    background-color: rgb(0 0 0 / 0.7);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 20px;
+  z-index: 999;
+  background-color: rgb(0 0 0 / 0.7);
 }
 
 .modal-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: max-content;
 }
 
 .pokemon-details-container {
-    background-color: #ededed;
-    padding: 20px;
-    display: flex;
-    gap: 10px;
-    max-width: max-content;
-    justify-content: space-around;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-radius: 8px;
-    border: rgb(0 0 0 / 0.15) solid 1px;
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  background-color: #ededed;
+  padding: 20px;
+  display: flex;
+  gap: 10px;
+  max-width: max-content;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-radius: 8px;
+  border: rgb(0 0 0 / 0.15) solid 1px;
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 .pokemon-item-container {
-    align-self: center;
-    max-width: max-content;
-    flex-grow: 0;
-    /* background-color: red; */
+  align-self: center;
+  max-width: max-content;
+  flex-grow: 0;
+  /* background-color: red; */
 }
 
 .pokemon-ability-container {
-    flex-grow: 1;
-    /* background-color: green; */
+  flex-grow: 1;
+  /* background-color: green; */
 }
 
 .col-1 {
-    /* background-color: pink; */
-    flex-grow: 1;
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
+  /* background-color: pink; */
+  flex-grow: 1;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
 
 .col-2 {
-    /* background-color: purple; */
-    flex-grow: 1;
-    max-width: 500px;
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
+  /* background-color: purple; */
+  flex-grow: 1;
+  max-width: 500px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
 
 .pokemon-ability-title {
-    font-size: 1.5rem;
-    text-align: center;
-    font-weight: 600;
-    /* background-color: yellow; */
-    padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 600;
+  /* background-color: yellow; */
+  padding: 10px;
 }
 
 .pokemon-name {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 600;
-    /* background-color: blue; */
-    padding: 10px;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600;
+  /* background-color: blue; */
+  padding: 10px;
 }
 
 .pokemon-stat-container {
-    /* background-color: violet; */
-    text-align: center;
-    flex-grow: 1;
+  /* background-color: violet; */
+  text-align: center;
+  flex-grow: 1;
 }
 
 .pokemon-type-container {
-    text-align: center;
-    justify-content: center;
-    padding-top: 20px;
-    /* background-color: orange; */
-    display: flex;
-    flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  padding-top: 20px;
+  /* background-color: orange; */
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .pokemon-type-item {
-    text-align: center;
-    padding: 10px;
-    margin: 0 10px;
-    border-radius: 8px;
-    border: rgb(0 0 0 / 0.15) solid 1px;
+  text-align: center;
+  padding: 10px;
+  margin: 0 10px;
+  border-radius: 8px;
+  border: rgb(0 0 0 / 0.15) solid 1px;
 }
 
 .pokemon-ability-item {
-    text-align: center;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 8px;
-    border: rgb(0 0 0 / 0.15) solid 1px;
+  text-align: center;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 8px;
+  border: rgb(0 0 0 / 0.15) solid 1px;
 }
 
 .pokemon-type-title {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .pokemon-details-close {
-    margin: 8px;
-    background-color: rgba(255, 255, 255);
-    width: max-content;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 8px;
-    bottom: 5vh;
-    border: rgb(0 0 0 / 0.15) solid 1px;
+  margin: 8px;
+  background-color: rgba(255, 255, 255);
+  width: max-content;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 8px;
+  bottom: 5vh;
+  border: rgb(0 0 0 / 0.15) solid 1px;
 }
