--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -7,7 +7,8 @@
   padding: 8px;
   border-radius: 8px;
   border: rgb(0 0 0 / 0.15) solid 1px;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 .pokemon-sprite-container {
@@ -44,7 +45,8 @@
   z-index: 2;
 }
 
-.pokemon-info-icon, .pokemon-pokeball-icon {
+.pokemon-info-icon,
+.pokemon-pokeball-icon {
   z-index: 2;
   max-height: 16px;
   aspect-ratio: 1;
