--- a/src/app/trainer/trainer.page.html
+++ b/src/app/trainer/trainer.page.html
@@ -1,14 +1,16 @@
 <section>
-    <h1>Trainer</h1>
-    <h2>{{ user?.username }}</h2>
+  <h1>Trainer</h1>
+  <h2>{{ user?.username }}</h2>
 </section>
 <main>
-    <app-pokemon-list
+  <app-pokemon-list
     class="catalogue-pokemon-list"
     [pokemon]="cataloguePokemon"
     [distance]="1"
     [throttle]="100"
     (onScroll)="loadMore()"
-    ></app-pokemon-list>
-    <a *ngIf="pokemons?.length === 0" role='button' routerLink="/catalogue">You have no Pokémons. Go to the catalogue to catch 'em all!</a>
+  ></app-pokemon-list>
+  <a *ngIf="pokemons?.length === 0" role="button" routerLink="/catalogue"
+    >You have no Pokémons. Go to the catalogue to catch 'em all!</a
+  >
 </main>
