style: made styling consistent for trainer and catalogue pages

--- a/src/app/catalogue/catalogue.page.css
+++ b/src/app/catalogue/catalogue.page.css
@@ -1,3 +1,7 @@
+.catalogue-pokemon-section {
+    padding-left: 3vw;
+}
+
 .catalogue-pokemon-list-container {
     margin: 0 auto;
     text-align: center;
