--- a/src/app/catalogue/catalogue.page.html
+++ b/src/app/catalogue/catalogue.page.html
@@ -1,4 +1,6 @@
-<h1>Catalogue</h1>
+<section class="catalogue-pokemon-section">
+  <h1>Catalogue</h1>
+</section>
 <div
   class="catalogue-pokemon-list-container"
 >
