FIX: asset path for pokeball in `NotFoundPage`

--- a/src/app/not-found/not-found.page.html
+++ b/src/app/not-found/not-found.page.html
@@ -2,7 +2,7 @@
     <section class="not-found-error-code">
         <h1 class="first-4-of-404">4</h1>
         <a class="back-to-home-btn" role='button' routerLinkActive="active-link" routerLink="" [routerLinkActiveOptions]="{exact:true}">
-            <img src="../../../assets/pokeball.png" alt="0 of 404" title="Go back home">
+            <img src="assets/pokeball.png" alt="0 of 404" title="Go back home">
         </a>
         <h1 class="second-4-of-404">4</h1>
     </section>
