FÌX: no needed cursor

--- a/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
+++ b/src/app/shared/pokemon-list-item/pokemon-list-item.component.css
@@ -45,8 +45,13 @@
   z-index: 2;
 }
 
-.pokemon-info-icon,
 .pokemon-pokeball-icon {
+  z-index: 2;
+  max-height: 16px;
+  aspect-ratio: 1;
+}
+
+.pokemon-info-icon {
   z-index: 2;
   max-height: 16px;
   aspect-ratio: 1;
